qt/gen_qgraphicstransform.nim


proc fcQGraphicsTransform_new(): ptr cQGraphicsTransform {.importc: "QGraphicsTransform_new".}
proc fcQGraphicsTransform_new2(parent: pointer): ptr cQGraphicsTransform {.importc: "QGraphicsTransform_new2".}
proc fcQGraphicsTransform_metaObject(self: pointer, ): pointer {.importc: "QGraphicsTransform_metaObject".}
proc fcQGraphicsTransform_metacast(self: pointer, param1: cstring): pointer {.importc: "QGraphicsTransform_metacast".}
proc fcQGraphicsTransform_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QGraphicsTransform_metacall".}
proc fcQGraphicsTransform_tr(s: cstring): struct_miqt_string {.importc: "QGraphicsTransform_tr".}
proc fcQGraphicsTransform_trUtf8(s: cstring): struct_miqt_string {.importc: "QGraphicsTransform_trUtf8".}
proc fcQGraphicsTransform_applyTo(self: pointer, matrix: pointer): void {.importc: "QGraphicsTransform_applyTo".}
proc fcQGraphicsTransform_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QGraphicsTransform_tr2".}
proc fcQGraphicsTransform_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGraphicsTransform_tr3".}
proc fcQGraphicsTransform_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QGraphicsTransform_trUtf82".}
proc fcQGraphicsTransform_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGraphicsTransform_trUtf83".}
proc fQGraphicsTransform_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QGraphicsTransform_virtualbase_metacall".}
proc fcQGraphicsTransform_override_virtual_metacall(self: pointer, slot: int) {.importc: "QGraphicsTransform_override_virtual_metacall".}
proc fcQGraphicsTransform_override_virtual_applyTo(self: pointer, slot: int) {.importc: "QGraphicsTransform_override_virtual_applyTo".}
proc fQGraphicsTransform_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QGraphicsTransform_virtualbase_event".}
proc fcQGraphicsTransform_override_virtual_event(self: pointer, slot: int) {.importc: "QGraphicsTransform_override_virtual_event".}
proc fQGraphicsTransform_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QGraphicsTransform_virtualbase_eventFilter".}
proc fcQGraphicsTransform_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QGraphicsTransform_override_virtual_eventFilter".}
proc fQGraphicsTransform_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QGraphicsTransform_virtualbase_timerEvent".}
proc fcQGraphicsTransform_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QGraphicsTransform_override_virtual_timerEvent".}
proc fQGraphicsTransform_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QGraphicsTransform_virtualbase_childEvent".}
proc fcQGraphicsTransform_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QGraphicsTransform_override_virtual_childEvent".}
proc fQGraphicsTransform_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QGraphicsTransform_virtualbase_customEvent".}
proc fcQGraphicsTransform_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QGraphicsTransform_override_virtual_customEvent".}
proc fQGraphicsTransform_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsTransform_virtualbase_connectNotify".}
proc fcQGraphicsTransform_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QGraphicsTransform_override_virtual_connectNotify".}
proc fQGraphicsTransform_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsTransform_virtualbase_disconnectNotify".}
proc fcQGraphicsTransform_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QGraphicsTransform_override_virtual_disconnectNotify".}
proc fcQGraphicsTransform_staticMetaObject(): pointer {.importc: "QGraphicsTransform_staticMetaObject".}
proc fcQGraphicsTransform_delete(self: pointer) {.importc: "QGraphicsTransform_delete".}
proc fcQGraphicsScale_new(): ptr cQGraphicsScale {.importc: "QGraphicsScale_new".}
proc fcQGraphicsScale_new2(parent: pointer): ptr cQGraphicsScale {.importc: "QGraphicsScale_new2".}
proc fcQGraphicsScale_metaObject(self: pointer, ): pointer {.importc: "QGraphicsScale_metaObject".}
proc fcQGraphicsScale_metacast(self: pointer, param1: cstring): pointer {.importc: "QGraphicsScale_metacast".}
proc fcQGraphicsScale_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QGraphicsScale_metacall".}
proc fcQGraphicsScale_tr(s: cstring): struct_miqt_string {.importc: "QGraphicsScale_tr".}
proc fcQGraphicsScale_trUtf8(s: cstring): struct_miqt_string {.importc: "QGraphicsScale_trUtf8".}
proc fcQGraphicsScale_origin(self: pointer, ): pointer {.importc: "QGraphicsScale_origin".}
proc fcQGraphicsScale_setOrigin(self: pointer, point: pointer): void {.importc: "QGraphicsScale_setOrigin".}
proc fcQGraphicsScale_xScale(self: pointer, ): float64 {.importc: "QGraphicsScale_xScale".}
proc fcQGraphicsScale_setXScale(self: pointer, xScale: float64): void {.importc: "QGraphicsScale_setXScale".}
proc fcQGraphicsScale_yScale(self: pointer, ): float64 {.importc: "QGraphicsScale_yScale".}
proc fcQGraphicsScale_setYScale(self: pointer, yScale: float64): void {.importc: "QGraphicsScale_setYScale".}
proc fcQGraphicsScale_zScale(self: pointer, ): float64 {.importc: "QGraphicsScale_zScale".}
proc fcQGraphicsScale_setZScale(self: pointer, zScale: float64): void {.importc: "QGraphicsScale_setZScale".}
proc fcQGraphicsScale_applyTo(self: pointer, matrix: pointer): void {.importc: "QGraphicsScale_applyTo".}
proc fcQGraphicsScale_originChanged(self: pointer, ): void {.importc: "QGraphicsScale_originChanged".}
proc fQGraphicsScale_connect_originChanged(self: pointer, slot: int) {.importc: "QGraphicsScale_connect_originChanged".}
proc fcQGraphicsScale_xScaleChanged(self: pointer, ): void {.importc: "QGraphicsScale_xScaleChanged".}
proc fQGraphicsScale_connect_xScaleChanged(self: pointer, slot: int) {.importc: "QGraphicsScale_connect_xScaleChanged".}
proc fcQGraphicsScale_yScaleChanged(self: pointer, ): void {.importc: "QGraphicsScale_yScaleChanged".}
proc fQGraphicsScale_connect_yScaleChanged(self: pointer, slot: int) {.importc: "QGraphicsScale_connect_yScaleChanged".}
proc fcQGraphicsScale_zScaleChanged(self: pointer, ): void {.importc: "QGraphicsScale_zScaleChanged".}
proc fQGraphicsScale_connect_zScaleChanged(self: pointer, slot: int) {.importc: "QGraphicsScale_connect_zScaleChanged".}
proc fcQGraphicsScale_scaleChanged(self: pointer, ): void {.importc: "QGraphicsScale_scaleChanged".}
proc fQGraphicsScale_connect_scaleChanged(self: pointer, slot: int) {.importc: "QGraphicsScale_connect_scaleChanged".}
proc fcQGraphicsScale_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QGraphicsScale_tr2".}
proc fcQGraphicsScale_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGraphicsScale_tr3".}
proc fcQGraphicsScale_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QGraphicsScale_trUtf82".}
proc fcQGraphicsScale_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGraphicsScale_trUtf83".}
proc fQGraphicsScale_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QGraphicsScale_virtualbase_metacall".}
proc fcQGraphicsScale_override_virtual_metacall(self: pointer, slot: int) {.importc: "QGraphicsScale_override_virtual_metacall".}
proc fQGraphicsScale_virtualbase_applyTo(self: pointer, matrix: pointer): void{.importc: "QGraphicsScale_virtualbase_applyTo".}
proc fcQGraphicsScale_override_virtual_applyTo(self: pointer, slot: int) {.importc: "QGraphicsScale_override_virtual_applyTo".}
proc fQGraphicsScale_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QGraphicsScale_virtualbase_event".}
proc fcQGraphicsScale_override_virtual_event(self: pointer, slot: int) {.importc: "QGraphicsScale_override_virtual_event".}
proc fQGraphicsScale_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QGraphicsScale_virtualbase_eventFilter".}
proc fcQGraphicsScale_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QGraphicsScale_override_virtual_eventFilter".}
proc fQGraphicsScale_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScale_virtualbase_timerEvent".}
proc fcQGraphicsScale_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QGraphicsScale_override_virtual_timerEvent".}
proc fQGraphicsScale_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScale_virtualbase_childEvent".}
proc fcQGraphicsScale_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QGraphicsScale_override_virtual_childEvent".}
proc fQGraphicsScale_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScale_virtualbase_customEvent".}
proc fcQGraphicsScale_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QGraphicsScale_override_virtual_customEvent".}
proc fQGraphicsScale_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsScale_virtualbase_connectNotify".}
proc fcQGraphicsScale_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QGraphicsScale_override_virtual_connectNotify".}
proc fQGraphicsScale_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsScale_virtualbase_disconnectNotify".}
proc fcQGraphicsScale_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QGraphicsScale_override_virtual_disconnectNotify".}
proc fcQGraphicsScale_staticMetaObject(): pointer {.importc: "QGraphicsScale_staticMetaObject".}
proc fcQGraphicsScale_delete(self: pointer) {.importc: "QGraphicsScale_delete".}
proc fcQGraphicsRotation_new(): ptr cQGraphicsRotation {.importc: "QGraphicsRotation_new".}
proc fcQGraphicsRotation_new2(parent: pointer): ptr cQGraphicsRotation {.importc: "QGraphicsRotation_new2".}
proc fcQGraphicsRotation_metaObject(self: pointer, ): pointer {.importc: "QGraphicsRotation_metaObject".}
proc fcQGraphicsRotation_metacast(self: pointer, param1: cstring): pointer {.importc: "QGraphicsRotation_metacast".}
proc fcQGraphicsRotation_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QGraphicsRotation_metacall".}
proc fcQGraphicsRotation_tr(s: cstring): struct_miqt_string {.importc: "QGraphicsRotation_tr".}
proc fcQGraphicsRotation_trUtf8(s: cstring): struct_miqt_string {.importc: "QGraphicsRotation_trUtf8".}
proc fcQGraphicsRotation_origin(self: pointer, ): pointer {.importc: "QGraphicsRotation_origin".}
proc fcQGraphicsRotation_setOrigin(self: pointer, point: pointer): void {.importc: "QGraphicsRotation_setOrigin".}
proc fcQGraphicsRotation_angle(self: pointer, ): float64 {.importc: "QGraphicsRotation_angle".}
proc fcQGraphicsRotation_setAngle(self: pointer, angle: float64): void {.importc: "QGraphicsRotation_setAngle".}
proc fcQGraphicsRotation_axis(self: pointer, ): pointer {.importc: "QGraphicsRotation_axis".}
proc fcQGraphicsRotation_setAxis(self: pointer, axis: pointer): void {.importc: "QGraphicsRotation_setAxis".}
proc fcQGraphicsRotation_setAxisWithAxis(self: pointer, axis: cint): void {.importc: "QGraphicsRotation_setAxisWithAxis".}
proc fcQGraphicsRotation_applyTo(self: pointer, matrix: pointer): void {.importc: "QGraphicsRotation_applyTo".}
proc fcQGraphicsRotation_originChanged(self: pointer, ): void {.importc: "QGraphicsRotation_originChanged".}
proc fQGraphicsRotation_connect_originChanged(self: pointer, slot: int) {.importc: "QGraphicsRotation_connect_originChanged".}
proc fcQGraphicsRotation_angleChanged(self: pointer, ): void {.importc: "QGraphicsRotation_angleChanged".}
proc fQGraphicsRotation_connect_angleChanged(self: pointer, slot: int) {.importc: "QGraphicsRotation_connect_angleChanged".}
